Fixes wrong coloring of listings on rental card page.

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -22,15 +22,15 @@
   margin-bottom: 20px;
 }
 
-.apartment {
+.Apartment {
   color: #a72da3;
 }
 
-.house {
+.House {
   color: #bf1818;
 }
 
-.condo {
+.Condo {
   color: #d68000;
 }
 
